[package]
name = "nuitrack_pose_estimation"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

[dependencies]
nuitrack-rs = { path = "../nuitrack-rs" }

[dev-dependencies]
nannou = { path = "../nannou" }
vulkano = "0.11.1"
vulkano-shaders = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
termion = "1"


[replace]
"vulkano:0.11.1" = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
